--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -1,9 +1,34 @@
+@Manual{R-ade4,
+  title = {ade4: Analysis of Ecological Data: Exploratory and Euclidean Methods
+in Environmental Sciences},
+  author = {Stéphane Dray and Anne-Béatrice Dufour and Jean Thioulouse and Thibaut Jombart and Sandrine Pavoine and Jean R. Lobry and Sébastien Ollier and Aurélie Siberchicot and Daniel Chessel},
+  year = {2023},
+  note = {R package version 1.7-22},
+  url = {http://pbil.univ-lyon1.fr/ADE-4/},
+}
+
+@Manual{R-adephylo,
+  title = {adephylo: Exploratory Analyses for the Phylogenetic Comparative Method},
+  author = {Thibaut Jombart and Stéphane Dray and Anders Ellern Bilgrau},
+  year = {2022},
+  note = {R package version 1.1-13},
+  url = {https://CRAN.R-project.org/package=adephylo},
+}
+
+@Manual{R-ape,
+  title = {ape: Analyses of Phylogenetics and Evolution},
+  author = {Emmanuel Paradis and Simon Blomberg and Ben Bolker and Joseph Brown and Santiago Claramunt and Julien Claude and Hoa Sien Cuong and Richard Desper and Gilles Didier and Benoit Durand and Julien Dutheil and RJ Ewing and Olivier Gascuel and Thomas Guillerme and Christoph Heibl and Anthony Ives and Bradley Jones and Franz Krah and Daniel Lawson and Vincent Lefort and Pierre Legendre and Jim Lemon and Guillaume Louvel and Eric Marcon and Rosemary McCloskey and Johan Nylander and Rainer Opgen-Rhein and Andrei-Alin Popescu and Manuela Royer-Carenzi and Klaus Schliep and Korbinian Strimmer and Damien {de Vienne}},
+  year = {2023},
+  note = {R package version 5.7-1},
+  url = {https://CRAN.R-project.org/package=ape},
+}
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2023},
+  year = {2024},
   url = {https://www.R-project.org/},
 }
 
@@ -29,6 +54,14 @@
   year = {2022},
   note = {R package version 0.5.3, https://discourse.mc-stan.org},
   url = {https://mc-stan.org/cmdstanr/},
+}
+
+@Manual{R-coda,
+  title = {coda: Output Analysis and Diagnostics for MCMC},
+  author = {Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines and Deepayan Sarkar and Douglas Bates and Russell Almond and Arni Magnusson},
+  year = {2020},
+  note = {R package version 0.19-4},
+  url = {https://CRAN.R-project.org/package=coda},
 }
 
 @Manual{R-colorspace,
@@ -83,7 +116,7 @@
   title = {fs: Cross-Platform File System Operations Based on libuv},
   author = {Jim Hester and Hadley Wickham and Gábor Csárdi},
   year = {2023},
-  note = {R package version 1.6.2},
+  note = {R package version 1.6.3},
   url = {https://CRAN.R-project.org/package=fs},
 }
 
@@ -132,8 +165,8 @@ ggplot2},
 @Manual{R-groundhog,
   title = {groundhog: Version-Control for CRAN, GitHub, and GitLab Packages},
   author = {Uri Simonsohn and Hugo Gruson},
-  year = {2023},
-  note = {R package version 3.1.0},
+  year = {2024},
+  note = {R package version 3.2.0},
   url = {https://CRAN.R-project.org/package=groundhog},
 }
 
@@ -170,12 +203,69 @@ https://arxiv.org/abs/1403.2805},
   url = {https://github.com/stefanedwards/lemon},
 }
 
+@Manual{R-loo,
+  title = {loo: Efficient Leave-One-Out Cross-Validation and WAIC for Bayesian
+Models},
+  author = {Aki Vehtari and Jonah Gabry and Mans Magnusson and Yuling Yao and Paul-Christian Bürkner and Topi Paananen and Andrew Gelman},
+  year = {2023},
+  note = {R package version 2.6.0},
+  url = {https://CRAN.R-project.org/package=loo},
+}
+
+@Manual{R-magrittr,
+  title = {magrittr: A Forward-Pipe Operator for R},
+  author = {Stefan Milton Bache and Hadley Wickham},
+  year = {2022},
+  note = {R package version 2.0.3},
+  url = {https://CRAN.R-project.org/package=magrittr},
+}
+
+@Manual{R-maps,
+  title = {maps: Draw Geographical Maps},
+  author = {Ray Brownrigg},
+  year = {2022},
+  note = {R package version 3.4.1},
+  url = {https://CRAN.R-project.org/package=maps},
+}
+
 @Manual{R-MASS,
   title = {MASS: Support Functions and Datasets for Venables and Ripley's MASS},
   author = {Brian Ripley},
   year = {2023},
   note = {R package version 7.3-60},
   url = {http://www.stats.ox.ac.uk/pub/MASS4/},
+}
+
+@Manual{R-Matrix,
+  title = {Matrix: Sparse and Dense Matrix Classes and Methods},
+  author = {Douglas Bates and Martin Maechler and Mikael Jagan},
+  year = {2023},
+  note = {R package version 1.6-0},
+  url = {https://Matrix.R-forge.R-project.org},
+}
+
+@Manual{R-MCMCglmm,
+  title = {MCMCglmm: MCMC Generalised Linear Mixed Models},
+  author = {Jarrod Hadfield},
+  year = {2023},
+  note = {R package version 2.35},
+  url = {https://CRAN.R-project.org/package=MCMCglmm},
+}
+
+@Manual{R-MuMIn,
+  title = {MuMIn: Multi-Model Inference},
+  author = {Kamil Bartoń},
+  year = {2023},
+  note = {R package version 1.47.5},
+  url = {https://CRAN.R-project.org/package=MuMIn},
+}
+
+@Manual{R-mvtnorm,
+  title = {mvtnorm: Multivariate Normal and t Distributions},
+  author = {Alan Genz and Frank Bretz and Tetsuhisa Miwa and Xuefei Mi and Torsten Hothorn},
+  year = {2023},
+  note = {R package version 1.2-2},
+  url = {http://mvtnorm.R-forge.R-project.org},
 }
 
 @Manual{R-naniar,
@@ -212,6 +302,14 @@ Cattell Scree Test},
   url = {https://CRAN.R-project.org/package=patchwork},
 }
 
+@Manual{R-phytools,
+  title = {phytools: Phylogenetic Tools for Comparative Biology (and Other Things)},
+  author = {Liam J. Revell},
+  year = {2023},
+  note = {R package version 1.9-16},
+  url = {https://github.com/liamrevell/phytools},
+}
+
 @Manual{R-psych,
   title = {psych: Procedures for Psychological, Psychometric, and Personality
 Research},
@@ -246,6 +344,14 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://rspatial.org/raster},
 }
 
+@Manual{R-Rcpp,
+  title = {Rcpp: Seamless R and C++ Integration},
+  author = {Dirk Eddelbuettel and Romain Francois and JJ Allaire and Kevin Ushey and Qiang Kou and Nathan Russell and Inaki Ucar and Douglas Bates and John Chambers},
+  year = {2023},
+  note = {R package version 1.0.11},
+  url = {https://CRAN.R-project.org/package=Rcpp},
+}
+
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
@@ -260,6 +366,14 @@ https://personality-project.org/r/psych-manual.pdf},
   year = {2020},
   note = {R package version 1.4.4},
   url = {https://github.com/hadley/reshape},
+}
+
+@Manual{R-rlang,
+  title = {rlang: Functions for Base Types and Core R and Tidyverse Features},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2023},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=rlang},
 }
 
 @Manual{R-rstan,
@@ -294,6 +408,14 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://www.math.uzh.ch/pages/spam/},
 }
 
+@Manual{R-StanHeaders,
+  title = {StanHeaders: C++ Header Files for Stan},
+  author = {Ben Goodrich and Andrew Gelman and Bob Carpenter and Matt Hoffman and Daniel Lee and Michael Betancourt and Marcus Brubaker and Jiqiang Guo and Peter Li and Allen Riddell and Marco Inacio and Mitzi Morris and Jeffrey Arnold and Rob Goedman and Brian Lau and Rob Trangucci and Jonah Gabry and Alp Kucukelbir and Robert Grant and Dustin Tran and Michael Malecki and Yuanjun Gao},
+  year = {2023},
+  note = {R package version 2.26.27},
+  url = {https://mc-stan.org/},
+}
+
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
@@ -322,7 +444,7 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {viridis: Colorblind-Friendly Color Maps for R},
   author = {Simon Garnier},
   year = {2023},
-  note = {R package version 0.6.3},
+  note = {R package version 0.6.4},
   url = {https://CRAN.R-project.org/package=viridis},
 }
 
@@ -332,6 +454,78 @@ https://personality-project.org/r/psych-manual.pdf},
   year = {2019},
   note = {R package version 1.8-4},
   url = {http://xtable.r-forge.r-project.org/},
+}
+
+@Article{ade42007a,
+  title = {The {ade4} Package: Implementing the Duality Diagram for Ecologists},
+  author = {St\'ephane Dray and Anne--B\'eatrice Dufour},
+  journal = {Journal of Statistical Software},
+  year = {2007},
+  volume = {22},
+  number = {4},
+  pages = {1--20},
+  doi = {10.18637/jss.v022.i04},
+}
+
+@Article{ade42018a,
+  title = {Supervised Multiblock Analysis in {R} with the {ade4} Package},
+  author = {St\'ephanie Bougeard and St\'ephane Dray},
+  journal = {Journal of Statistical Software},
+  year = {2018},
+  volume = {86},
+  number = {1},
+  pages = {1--17},
+  doi = {10.18637/jss.v086.i01},
+}
+
+@Article{ade42004a,
+  title = {The {ade4} Package -- {I}: One-Table Methods},
+  author = {Daniel Chessel and Anne-B\'eatrice Dufour and Jean Thioulouse},
+  journal = {R News},
+  year = {2004},
+  volume = {4},
+  number = {1},
+  pages = {5--10},
+  url = {https://cran.r-project.org/doc/Rnews/},
+}
+
+@Article{ade42007b,
+  title = {The {ade4} Package -- {II}: Two-Table and {K}-Table Methods},
+  author = {St\'ephane Dray and Anne-B\'eatrice Dufour and Daniel Chessel},
+  journal = {R News},
+  year = {2007},
+  volume = {7},
+  number = {2},
+  pages = {47--52},
+  url = {https://cran.r-project.org/doc/Rnews/},
+}
+
+@Book{ade42018b,
+  title = {Multivariate Analysis of Ecological Data with {ade4}},
+  author = {Jean Thioulouse and St\'ephane Dray and Anne--B\'eatrice Dufour and Aur\'elie Siberchicot and Thibaut Jombart and Sandrine Pavoine},
+  year = {2018},
+  publisher = {Springer},
+  doi = {10.1007/978-1-4939-8850-1},
+}
+
+@Article{adephylo2010,
+  title = {adephylo: exploratory analyses for the phylogenetic comparative method.},
+  journal = {Bioinformatics},
+  year = {2010},
+  author = {T. Jombart and S. Dray},
+  volume = {26},
+  pages = {1907-1909},
+  doi = {10.1093/bioinformatics/btq292},
+}
+
+@Article{ape2019,
+  title = {ape 5.0: an environment for modern phylogenetics and evolutionary analyses in {R}},
+  author = {Emmanuel Paradis and Klaus Schliep},
+  journal = {Bioinformatics},
+  year = {2019},
+  volume = {35},
+  pages = {526-528},
+  doi = {10.1093/bioinformatics/bty633},
 }
 
 @Article{brms2017,
@@ -368,6 +562,18 @@ https://personality-project.org/r/psych-manual.pdf},
   pages = {1--54},
   doi = {10.18637/jss.v100.i05},
   encoding = {UTF-8},
+}
+
+@Article{coda2006,
+  title = {CODA: Convergence Diagnosis and Output Analysis for MCMC},
+  author = {Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines},
+  journal = {R News},
+  year = {2006},
+  volume = {6},
+  number = {1},
+  pages = {7--11},
+  url = {https://journal.r-project.org/archive/},
+  pdf = {https://www.r-project.org/doc/Rnews/Rnews_2006-1.pdf},
 }
 
 @Article{colorspace2020a,
@@ -451,6 +657,25 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {http://lmdvr.r-forge.r-project.org},
 }
 
+@Article{loo2017a,
+  title = {Practical Bayesian model evaluation using leave-one-out cross-validation and WAIC},
+  author = {Aki Vehtari and Andrew Gelman and Jonah Gabry},
+  year = {2017},
+  journal = {Statistics and Computing},
+  volume = {27},
+  issue = {5},
+  pages = {1413--1432},
+  doi = {10.1007/s11222-016-9696-4},
+}
+
+@Article{loo2017b,
+  title = {Using stacking to average Bayesian predictive distributions},
+  author = {Yuling Yao and Aki Vehtari and Daniel Simpson and Andrew Gelman},
+  year = {2017},
+  journal = {Bayesian Analysis},
+  doi = {10.1214/17-BA1091},
+}
+
 @Book{MASS2002,
   title = {Modern Applied Statistics with S},
   author = {W. N. Venables and B. D. Ripley},
@@ -462,6 +687,27 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://www.stats.ox.ac.uk/pub/MASS4/},
 }
 
+@Article{MCMCglmm2010,
+  title = {MCMC Methods for Multi-Response Generalized Linear Mixed Models: The {MCMCglmm} {R} Package},
+  author = {Jarrod D. Hadfield},
+  journal = {Journal of Statistical Software},
+  year = {2010},
+  volume = {33},
+  number = {2},
+  pages = {1--22},
+  url = {https://www.jstatsoft.org/v33/i02/},
+}
+
+@Book{mvtnorm2009,
+  title = {Computation of Multivariate Normal and t Probabilities},
+  author = {Alan Genz and Frank Bretz},
+  series = {Lecture Notes in Statistics},
+  year = {2009},
+  publisher = {Springer-Verlag},
+  address = {Heidelberg},
+  isbn = {978-3-642-01688-2},
+}
+
 @Article{naniar2023,
   title = {Expanding Tidy Data Principles to Facilitate Missing Data Exploration, Visualization and Assessment of Imputations},
   author = {Nicholas Tierney and Dianne Cook},
@@ -471,6 +717,48 @@ https://personality-project.org/r/psych-manual.pdf},
   number = {7},
   pages = {1--31},
   doi = {10.18637/jss.v105.i07},
+}
+
+@Article{phytools2012,
+  title = {phytools: An {R} package for phylogenetic comparative biology (and other things).},
+  author = {Liam J. Revell},
+  journal = {Methods in Ecology and Evolution},
+  year = {2012},
+  volume = {3},
+  pages = {217-223},
+  doi = {10.1111/j.2041-210X.2011.00169.x},
+}
+
+@Article{Rcpp2011,
+  title = {{Rcpp}: Seamless {R} and {C++} Integration},
+  author = {Dirk Eddelbuettel and Romain Fran\c{c}ois},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {8},
+  pages = {1--18},
+  doi = {10.18637/jss.v040.i08},
+}
+
+@Book{Rcpp2013,
+  title = {Seamless {R} and {C++} Integration with {Rcpp}},
+  author = {Dirk Eddelbuettel},
+  publisher = {Springer},
+  address = {New York},
+  year = {2013},
+  note = {ISBN 978-1-4614-6867-7},
+  doi = {10.1007/978-1-4614-6868-4},
+}
+
+@Article{Rcpp2018,
+  title = {{Extending {R} with {C++}: A Brief Introduction to {Rcpp}}},
+  author = {Dirk Eddelbuettel and James Joseph Balamuta},
+  journal = {The American Statistician},
+  year = {2018},
+  volume = {72},
+  number = {1},
+  pages = {28-36},
+  doi = {10.1080/00031305.2017.1375990},
 }
 
 @Article{reshape22007,
@@ -541,8 +829,8 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {{viridis(Lite)} - Colorblind-Friendly Color Maps for R},
   author = {{Garnier} and {Simon} and {Ross} and {Noam} and {Rudis} and {Robert} and {Camargo} and Antônio Pedro and {Sciaini} and {Marco} and {Scherer} and {Cédric}},
   year = {2023},
-  note = {viridis package version 0.6.3},
+  note = {viridis package version 0.6.4},
   url = {https://sjmgarnier.github.io/viridis/},
-  doi = {10.5281/zenodo.4679424},
+  doi = {10.5281/zenodo.4679423},
 }
 
