--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -165,8 +165,8 @@ ggplot2},
 @Manual{R-groundhog,
   title = {groundhog: Version-Control for CRAN, GitHub, and GitLab Packages},
   author = {Uri Simonsohn and Hugo Gruson},
-  year = {2023},
-  note = {R package version 3.1.1},
+  year = {2024},
+  note = {R package version 3.2.0},
   url = {https://CRAN.R-project.org/package=groundhog},
 }
 
@@ -297,8 +297,8 @@ Cattell Scree Test},
 @Manual{R-patchwork,
   title = {patchwork: The Composer of Plots},
   author = {Thomas Lin Pedersen},
-  year = {2022},
-  note = {R package version 1.1.2},
+  year = {2023},
+  note = {R package version 1.1.3},
   url = {https://CRAN.R-project.org/package=patchwork},
 }
 
@@ -817,7 +817,7 @@ https://personality-project.org/r/psych-manual.pdf},
 @Article{spam2017,
   title = {Extending {R} packages to support 64-bit compiled code: An illustration with spam64 and {GIMMS} {NDVI3g} data},
   author = {Florian Gerber and Kaspar Moesinger and Reinhard Furrer},
-  journal = {Computer & Geoscience},
+  journal = {Computer \& Geoscience},
   year = {2017},
   volume = {104},
   pages = {109--119},
