--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -384,6 +384,14 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://CRAN.R-project.org/package=rstan},
 }
 
+@Manual{R-rstanarm,
+  title = {rstanarm: Bayesian Applied Regression Modeling via Stan},
+  author = {Jonah Gabry and Ben Goodrich},
+  year = {2023},
+  note = {R package version 2.21.4},
+  url = {https://CRAN.R-project.org/package=rstanarm},
+}
+
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
   author = {Hadley Wickham and Dana Seidel},
@@ -770,6 +778,14 @@ https://personality-project.org/r/psych-manual.pdf},
   number = {12},
   pages = {1--20},
   url = {http://www.jstatsoft.org/v21/i12/},
+}
+
+@Misc{rstanarm2018,
+  title = {Joint longitudinal and time-to-event models via {Stan}.},
+  author = {SL Brilleman and MJ Crowther and M Moreno-Betancur and J {Buros Novik} and R Wolfe},
+  note = {StanCon 2018. 10-12 Jan 2018. Pacific Grove, CA, USA.},
+  url = {https://github.com/stan-dev/stancon_talks/},
+  year = {2018},
 }
 
 @Article{sp2005,
